Making expiration status more prominent on connection page

--- a/client/connection_details/connection_details.jade
+++ b/client/connection_details/connection_details.jade
@@ -4,7 +4,7 @@
 
 template(name='connectionDetails')
   .connection-details(data-connection-id=_id)
-    h1 Connection Details [{{ readableType }}]
+    h1 Connection Details [#{ readableType }] [#{ expirationStatus }]
 
     h2 Shared Info
     section.actions
