Adding node apn and ability to send user test push notification

--- a/client/user_details/user_details.jade
+++ b/client/user_details/user_details.jade
@@ -44,6 +44,8 @@ template(name='userDetails')
             button.remove-device Remove Device
       textarea#push-token
       button.add-push-token Add Push Token
+      textarea#push-message
+      button.send-push-message Send Push Message
     section.photos
       h2 Photos
       ul
