--- a/client/user_candidates/user_candidates.less
+++ b/client/user_candidates/user_candidates.less
@@ -1,8 +1,36 @@
 
 .user-candidates {
   margin: 10px;
-  img {
-    width: 100px;
-    height: 100px;
+
+  h1 {
+    margin-left: 20px;
+  }
+
+  ol {
+    padding: 0;
+    li {
+      padding: 20px 0;
+      border-top: 1px solid gray;
+    }
+    .avatar {
+      display: inline-block;
+      display: inline-block;
+      vertical-align: top;
+      img {
+        display: inline-block;
+        float: left;
+        display: block;
+        width: 100px;
+        height: 100px;
+      }
+    }
+
+    .my-choice {
+      margin: 10px 0;
+      /* display: inline-block; */
+    }
+    .their-choice {
+      /* display: inline-block; */
+    }
   }
 }
