populate user's info with actual info from facebook. https://app.asana.com/0/27526224232793/28193405444854

--- a/client/user_details/user_details.jade
+++ b/client/user_details/user_details.jade
@@ -11,6 +11,7 @@ template(name='userDetails')
       ul
         li <strong>Work:</strong> #{ work }
         li <strong>Education:</strong> #{ education }
+        li <strong>Location:</strong> #{ location }
         li <strong>Age:</strong> #{ age }
         li <strong>Created At:</strong> #{ createdAt }
         li <strong>Updated At:</strong> #{ updatedAt }
@@ -31,6 +32,7 @@ template(name='userDetails')
           li TODO: Many other infos to come, location, work, etc.
 
       button.update-fb-access-token Update Access Token
+      button.login-as-user Login as user
       button.clear-photos Clear Photos
       button.reload-fb-photos Reload Facebook Photos
 
