separate APNS environemnts. https://app.asana.com/0/27526224232793/27986764289113

--- a/client/user_details/user_details.jade
+++ b/client/user_details/user_details.jade
@@ -42,6 +42,8 @@ template(name='userDetails')
         +each devices
           li Id: #{ _id }
           li Push Token: #{ _id }
+          li APN Env: #{ apnEnvironment }
+          li App ID: #{ appId }
           li
             button.remove-device Remove Device
       #push-token
