add back inverse candidate button

--- a/client/user_candidates/user_candidates.jade
+++ b/client/user_candidates/user_candidates.jade
@@ -11,7 +11,7 @@ template(name='_candidateList')
         span Id: #{ _id }
         span Updated At #{ updatedAt }
         button.remove-candidate Remove
-        //button.create-inverse Add #{forUser.firstName} to #{user.firstName}'s queue
+        button.create-inverse Add #{forUser.firstName} to #{user.firstName}'s queue
 
         br
         .my-choice
