--- a/client/user_candidates/user_candidates.jade
+++ b/client/user_candidates/user_candidates.jade
@@ -38,7 +38,7 @@ template(name='userCandidates')
       button.clear-queue Clear Candidate Queue
 
       +if loggedInUser
-        button.replace-with-logged-in-user Add #{loggedInUser.firstName} to Queue :P
+        button.add-logged-in-user-to-queue Add #{loggedInUser.firstName} (and 2 random users) to Queue :P
 
     section.candidate-queue
       +_candidateList candidateQueue
