--- a/client/splash/splash.less
+++ b/client/splash/splash.less
@@ -76,6 +76,10 @@ p {
   animation: sway 1.75s ease-in-out 0s infinite alternate;
 }
 
+a.download {
+  position: fixed;
+}
+
 @keyframes bob {
   from { transform: translate(0, -81px);}
   to { transform: translate(0, -87px);}
