Apple only wants https url for plist

--- a/client/splash/splash.jade
+++ b/client/splash/splash.jade
@@ -9,4 +9,4 @@ template(name='splash')
     .sea
       .ketchWrapper
         img.ketchIcon(src='/images/ketchIcon.png')
-    a.download(href="itms-services://?action=download-manifest&url=http://goo.gl/lVpv2w") Download Beta
+    a.download(href="itms-services://?action=download-manifest&url=https://goo.gl/lVpv2w") Download Beta
