--- a/client/splash/splash.less
+++ b/client/splash/splash.less
@@ -61,7 +61,6 @@ p {
 
 .ketchWrapper {
   width: 100%;
-  // height: 100%;
   transform-origin: center bottom;
   animation: bob 1.75s ease-in-out 0s infinite alternate;
 }
@@ -77,7 +76,17 @@ p {
 }
 
 a.download {
-  position: fixed;
+  font-size: 1.1em;
+  letter-spacing: 2px;
+  margin: 0 auto;
+  color: white;
+  font-weight: bold;
+  border: 2px solid white;
+  height: 50px;
+  padding: 10px 50px;
+  border-radius: 30px;
+  width: 80%;
+  max-width: 360px;
 }
 
 @keyframes bob {
