clear previous candidates

--- a/client/user_candidates/user_candidates.jade
+++ b/client/user_candidates/user_candidates.jade
@@ -48,6 +48,7 @@ template(name='userPreviousCandidates')
     h1 #{ firstName }’s Previous Candidates
     +userNav
 
+    button.clear-previous-candidates Clear Previous Candidates
     section.previous-candidates
       +_candidateList previousCandidates
 
