allow for user deletes. We ended up with 2 users for Diana for example. Removing one Diana for now; will investigate this later. https://app.asana.com/0/28209080808036/28208574260305

--- a/client/user_details/user_details.jade
+++ b/client/user_details/user_details.jade
@@ -35,6 +35,7 @@ template(name='userDetails')
       button.login-as-user Login as user
       button.clear-photos Clear Photos
       button.reload-fb-photos Reload Facebook Photos
+      button.delete-user Delete User
 
     section.devices
       h2 Devices
