Add a button on import screen to batch remove fake users. https://app.asana.com/0/28209080808036/28352090279167

--- a/client/index.jade
+++ b/client/index.jade
@@ -8,6 +8,8 @@ body
 
 template(name='importFixture')
   section.import
+    button.remove-all-fake-data Remove ALL fake data
+
     h1 Paste json text here
     p See example in fixtures directory
     textarea#json-text
