remove all tests so that server does not throw random errors

--- a/client/user_details/user_details.jade
+++ b/client/user_details/user_details.jade
@@ -13,6 +13,8 @@ template(name='userDetails')
         li <strong>Education:</strong> #{ education }
         li <strong>Location:</strong> #{ location }
         li <strong>Age:</strong> #{ age }
+        li <strong>Timezone offset (in minutes) from UTC:</strong> #{ timezoneOffset }
+        li <strong>Next candidate refresh:</strong> #{ nextRefreshTimestamp }
         li <strong>Created At:</strong> #{ createdAt }
         li <strong>Updated At:</strong> #{ updatedAt }
         li <strong>About:</strong>
