preliminary version of a refreshing matching service. by default, it refreshes every 24 hours, and starts as soon as the server updates (~12:03am pacific). I built in the ability for us to manually vet/unvet users for QA. I also built in the ability for us to manually activate/deactivate users (in the event that we dont want to wait 24 hours for a match. A server flag can also be supplied to decrease the interval length. https://app.asana.com/0/28209080808036/27526224233325 https://app.asana.com/0/28209080808036/28625441865668

--- a/client/user_candidates/user_candidates.jade
+++ b/client/user_candidates/user_candidates.jade
@@ -9,9 +9,28 @@ template(name='_candidateList')
           img(src=user.profilePhotoUrl)
         span #{ user.firstName }’s
         span Id: #{ _id }
+        br
         span Updated At #{ updatedAt }
+        br
+        span Is Vetted?
+        span.green #{ vetted }
+        br
+        span Is Active?
+        span.green #{ active }
+        br
         button.remove-candidate Remove
         button.create-inverse Add #{forUser.firstName} to #{user.firstName}'s queue
+
+        +if(vetted)
+          button.unvet-user Unvet User
+        +else
+          button.vet-user Vet User
+
+        +if(active)
+          button.deactivate-user Deactivate
+        +else
+          button.activate-user Activate
+
 
         br
         .my-choice
@@ -41,7 +60,7 @@ template(name='userCandidates')
         button.add-logged-in-user-to-queue Add #{loggedInUser.firstName} and #{firstName} to eachother's Queues
 
     section.candidate-queue
-      +_candidateList candidateQueue
+      +_candidateList allCandidatesWithoutDecision
 
 template(name='userPreviousCandidates')
   .user-candidates
