--- a/client/user_candidates/user_candidates.less
+++ b/client/user_candidates/user_candidates.less
@@ -13,8 +13,8 @@
       border-top: 1px solid gray;
     }
     .avatar {
-      display: inline-block;
-      display: inline-block;
+      float: left;
+      padding-right: 10px;
       vertical-align: top;
       img {
         display: inline-block;
@@ -23,6 +23,11 @@
         width: 100px;
         height: 100px;
       }
+    }
+
+    .green {
+      background: #006400;
+      color: #ffffff;
     }
 
     .my-choice {
