store birthday as date, so that we can edit it later. https://app.asana.com/0/28209080808036/28732453775690

--- a/client/user_details/user_details.jade
+++ b/client/user_details/user_details.jade
@@ -13,6 +13,7 @@ template(name='userDetails')
         li <strong>Education:</strong> #{ education }
         li <strong>Location:</strong> #{ location }
         li <strong>Age:</strong> #{ age }
+        li <strong>Birthday:</strong> #{ birthday }
         li <strong>Timezone:</strong> #{ timezone }
         li <strong>Next candidate refresh:</strong> #{ nextRefreshTimestamp }
         li <strong>Created At:</strong> #{ createdAt }
