--- a/client/user_details/user_details.jade
+++ b/client/user_details/user_details.jade
@@ -9,6 +9,7 @@ template(name='userDetails')
     section.info
       h2 Info
       ul
+        li <strong>Last Name:</strong> #{ lastName }
         li <strong>Work:</strong> #{ work }
         li <strong>Education:</strong> #{ education }
         li <strong>Location:</strong> #{ location }
