--- a/client/splash/splash.less
+++ b/client/splash/splash.less
@@ -7,6 +7,13 @@ html, body {
   height: 100%;
 }
 
+#version {
+  bottom: 5px;
+  right: 5px;
+  position: fixed;
+  z-index: 3;
+}
+
 #home {
   // background: white;
   width: 100%;
