--- a/client/user_details/user_details.less
+++ b/client/user_details/user_details.less
@@ -24,6 +24,12 @@
       color: blue;
     }
   }
+  .vetted {
+    color:#006400;
+  }
+  .unvetted {
+    color:#cc0000;
+  }
   .devices {
     overflow: hidden;
     margin-bottom: 30px;
