--- a/client/user_details/user_details.less
+++ b/client/user_details/user_details.less
@@ -25,10 +25,16 @@
     }
   }
   .vetted {
-    color:#006400;
+    color: #006400;
+  }
+  .blocked {
+    color: #cc0000;
   }
   .unvetted {
-    color:#cc0000;
+    color: #cccccc;
+  }
+  .snoozed {
+    color: #0000FF;
   }
   .devices {
     overflow: hidden;
