--- a/client/vet_list/vet_list.jade
+++ b/client/vet_list/vet_list.jade
@@ -7,4 +7,7 @@ template(name='vetQueue')
           a(href='/users/#{ _id }')
             img.avatar(src=profilePhotoUrl)
             span.name #{ firstName }
-            span.grey #{ createdAt }
+          span.grey #{ createdAt }
+          +vetUser
+          +snoozeUser
+          +blockUser
