--- a/client/user_list/user_list.less
+++ b/client/user_list/user_list.less
@@ -17,4 +17,12 @@
     display: block;
     margin-bottom: 5px;
   }
+
+  .vetted {
+    background: #00FF00;
+  }
+
+  .unvetted {
+    background: #FFEED4;
+  }
 }
