revert the adminview stuff that i thought would be a good idea. the admin view should be god-view, so we should not restrict it to any specific view

--- a/client/shared/footer.jade
+++ b/client/shared/footer.jade
@@ -3,5 +3,5 @@ template(name='footer')
     #footer
       .footer-content {{ loggedInUser.firstName }}
         button.update-fb-access-token Logout
-      img.avatar(src=loggedInUser.adminView.profilePhotoUrl)
+      img.avatar(src=loggedInUser.profilePhotoUrl)
 
