--- a/client/user_candidates/user_candidates.jade
+++ b/client/user_candidates/user_candidates.jade
@@ -6,7 +6,7 @@ template(name='_candidateList')
     +each this
       li
         a.avatar(href='/users/#{ user._id }')
-          img(src=user.view.profilePhotoUrl)
+          img(src=user.profilePhotoUrl)
         span #{ user.firstName }’s
         span Id: #{ _id }
         br
