--- a/client/user_connections/user_connections.jade
+++ b/client/user_connections/user_connections.jade
@@ -6,7 +6,7 @@ template(name='_connectionList')
     +each this
       li
         a(href='/connections/#{ _id }')
-          img.avatar(src=otherUser.view.profilePhotoUrl)
+          img.avatar(src=otherUser.profilePhotoUrl)
         span #{ otherUser.firstName }
         span Expires At: #{ expiresAt }
         button.set-expire-days Set expire days from now
