--- a/client/user_details/user_details.less
+++ b/client/user_details/user_details.less
@@ -55,6 +55,13 @@
     z-index:5;
   }
 
+  .update-order {
+    position:absolute;
+    bottom:0px;
+    left:0px;
+    z-index:5;
+  }
+
   .devices {
     overflow: hidden;
     margin-bottom: 30px;
