remove phrasing 'users to vet' and replace this with new users (we havent made a decision yet), snoozed user (we think theyre good but the gender ratio is meh now, and blocked users (we don't want them to enter)

--- a/client/vet_list/vet_list.jade
+++ b/client/vet_list/vet_list.jade
@@ -1,13 +1,30 @@
+template(name="examineUser")
+  a(href='/users/#{ _id }')
+    img.avatar(src=profilePhotoUrl)
+    span.name #{ firstName }
+  span.grey #{ createdAt }
+  +vetUser
+  +snoozeUser
+  +blockUser
 
 template(name='vetQueue')
   .user-queue
-    ul
-      +each usersToVet
+    h1 New Users
+      +each newUsers
         li
-          a(href='/users/#{ _id }')
-            img.avatar(src=profilePhotoUrl)
-            span.name #{ firstName }
-          span.grey #{ createdAt }
-          +vetUser
-          +snoozeUser
-          +blockUser
+          +examineUser
+
+    h1 Snoozed Users
+    ul
+      +each snoozedUsers
+        li
+          +examineUser
+
+    h1 Blocked Users
+    ul
+      +each blockedUsers
+        li
+          +examineUser
+    //h1 Blocked list
+    //  ul
+    //    +each blockedUsers
