2 column view for users. those who have < 1 games worth of vetted candidates and those who have >= 1

--- a/client/user_list/user_list.less
+++ b/client/user_list/user_list.less
@@ -1,6 +1,8 @@
 
 .user-list {
   margin:10px;
+  width:900px;
+  margin:auto;
 
   li {
     text-align: center;
@@ -16,6 +18,18 @@
     border-radius: 50%;
     display: block;
     margin-bottom: 5px;
+  }
+
+  #user-list-needs-attention {
+    display:block;
+    width:50%;
+    float:left;
+  }
+
+  #user-list-ok {
+    display:block;
+    float:right;
+    width:50%;
   }
 
   .vetted {
