--- a/client/user_list/user_list.jade
+++ b/client/user_list/user_list.jade
@@ -1,19 +1,31 @@
 //
    Created by Tony on 2/22/15.
 
+template(name='processUserList')
+  +if(isVetted)
+    li.vetted
+      a(href='/users/#{ _id }')
+        img.avatar(src=profilePhotoUrl)
+        span #{ firstName }
+  +else
+    li.unvetted
+      a(href='/users/#{ _id }')
+        img.avatar(src=profilePhotoUrl)
+        span #{ firstName }
+
 template(name='userList')
   .user-list
-    h1 Search
+    h1 search
       input.text(id="search")
-    ul
-      +each users
-        +if(isVetted)
-          li.vetted
-            a(href='/users/#{ _id }')
-              img.avatar(src=profilePhotoUrl)
-              span #{ firstName }
-        +else
-          li.unvetted
-            a(href='/users/#{ _id }')
-              img.avatar(src=profilePhotoUrl)
-              span #{ firstName }
+
+    div#user-list-needs-attention
+      h1 need more candidates!
+      ul
+        +each usersRunningOutOfVettedCandidates
+          +processUserList
+
+    div#user-list-ok
+      h1 ok users
+      ul
+        +each users
+          +processUserList
