add snoozed candidates as a special section below unchosen candidates. These will be surfaced to the user in the event that they're a better fit, or we run out of unchosen candidates.

--- a/client/user_candidates/user_candidates.jade
+++ b/client/user_candidates/user_candidates.jade
@@ -62,6 +62,10 @@ template(name='userCandidates')
     section.candidate-queue
       +_candidateList allCandidatesWithoutDecision
 
+    h2 Snoozed Candidates
+    section.candidate-queue
+      +_candidateList snoozedCandidates
+
 template(name='userPreviousCandidates')
   .user-candidates
     h1 #{ firstName }’s Previous Candidates
