--- a/client/user_details/user_details.jade
+++ b/client/user_details/user_details.jade
@@ -70,7 +70,10 @@ template(name='userDetails')
       button.login-as-user Login as user
       button.clear-photos Clear Photos
       button.reload-fb-photos Reload Facebook Photos
-      button.delete-user Delete User
+      +if(_isDeleted)
+        button.restore-deleted-user Restore Deleted User
+      +else
+        button.delete-user Delete User
 
     section.devices
       h2 Devices
