Basic functionality for user edit

--- a/client/shared/nav.jade
+++ b/client/shared/nav.jade
@@ -11,4 +11,6 @@ template(name='userNav')
       a(href='/users/#{ _id }/previous_candidates') Previous Candidates
     button
       a(href='/users/#{ _id }/connections') Connections
+    button
+      a(href='/users/#{ _id }/edit') Edit User
     img.small-avatar(src=profilePhotoUrl)
