allows for very basic user editing functionality

--- a/client/user_edit/user_edit.jade
+++ b/client/user_edit/user_edit.jade
@@ -1,6 +1,6 @@
 template(name='userEdit')
-  section.import
+  section.import(data-user-id=_id)
     h1 Edit User
       p Please take caution in doing this.
     textarea#json-text #{info}
-    button.import-submit Submit
+    button.edit-submit Submit
