refactor meta collections to index. subscribe to crab id and display crab (with link to support) in user list

--- a/client/user_list/user_list.jade
+++ b/client/user_list/user_list.jade
@@ -15,8 +15,11 @@ template(name='processUserList')
 
 template(name='userList')
   .user-list
-    h1 search
-      input.text(id="search")
+    div#header
+      a.support(href='/support')
+        img.avatar(src=crab.profilePhotoUrl)
+      h1.search-box search
+        input.text(id="search")
 
     div#user-list-needs-attention
       h1 need more candidates!
