--- a/client/user_list/user_list.less
+++ b/client/user_list/user_list.less
@@ -12,6 +12,19 @@
     float: left
   }
 
+  .support {
+    display: inline-block;
+    margin-right:10px;
+    top: 20px;
+    position:relative;
+  }
+
+  .search-box {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+  }
+
   img.avatar {
     width: 100px;
     height: 100px;
