fix undefined function error

--- a/client/connection_details/connection_details.jade
+++ b/client/connection_details/connection_details.jade
@@ -34,7 +34,7 @@ template(name='connectionDetails')
       li Created At: #{ createdAt }
       li Type: {{ readableType }}
       li Last Message: #{ lastMessageText }
-      li Is Expired: #{ isExpired }
+      li Expiration status: #{ expirationStatus }
       li Expires At: #{ expiresAt }
       li Message Count: #{ messages.count }
 
