s/user.vetted/user.metadata.vetted

--- a/client/user_candidates/user_candidates.jade
+++ b/client/user_candidates/user_candidates.jade
@@ -13,7 +13,7 @@ template(name='_candidateList')
         span Updated At #{ updatedAt }
         br
         span Is Vetted?
-        span.green #{ vetted }
+        span.green #{ metadata.vetted }
         br
         span Is Active?
         span.green #{ active }
