--- a/client/user_details/user_details.less
+++ b/client/user_details/user_details.less
@@ -62,6 +62,11 @@
     z-index:5;
   }
 
+  .metadata {
+    color:#0000FF;
+    font-style:italic;
+  }
+
   .devices {
     overflow: hidden;
     margin-bottom: 30px;
