actually display push token.

--- a/client/user_details/user_details.jade
+++ b/client/user_details/user_details.jade
@@ -82,7 +82,7 @@ template(name='userDetails')
       ul
         +each devices
           li Id: #{ _id }
-          li Push Token: #{ _id }
+          li Push Token: #{ pushToken }
           li APN Env: #{ apnEnvironment }
           li App ID: #{ appId }
           li
