when admin clicks delete in admin interface, mark the user as deleted

--- a/client/user_details/user_details.jade
+++ b/client/user_details/user_details.jade
@@ -15,6 +15,11 @@ template(name='userDetails')
   .user-details(data-user-id=_id)
     h1 #{ firstName }’s Profile
 
+    +if(_isDeleted)
+      h1.blocked DELETED
+    +else
+      h1.vetted ACTIVE (not deleted)
+
     +userNav
 
     section.info
